force-app/main/default/objects/Comment__c/fields/Feed__c.field-meta.xml
<CustomField>
    <fullName>Feed__c</fullName>
    <label>Feed</label>
    <referenceTo>Feed__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>