force-app/main/default/objects/Comment__c/fields/Inserted_By__c.field-meta.xml
<CustomField>
    <fullName>Inserted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inserted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>